adding home page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Personal page</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav class="navbar">
+        <div class="logo">Anme22</div>
+        <ul class="nav-links">
+          <input type="checkbox" id="checkbox_toggle" />
+          <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+          <div class="menu">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+          </div>
+        </ul>
+      </nav>
+    </header>
+    <section class="mainSection">
+      <h1>Anme22</h1>
+      <p class="sectionParagraph">
+        I am Angel Mendez, a software developer from Honduras. I enjoy the
+        flexibility of remote work and have a strong passion for software
+        development. I am constantly seeking to learn and apply new technologies
+        to create innovative and efficient solutions.
+      </p>
+      <p class="sectionParagraph">
+        I possess a diverse skill set ranging from building websites using HTML,
+        CSS, and Javascript to creating and implementing dynamic components in
+        React JS.
+      </p>
+      <img src="" alt="" />
+    </section>
+  </body>
 </html>
