Trying add fontawesome icons

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Personal page</title>
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/e749fbab06.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
@@ -34,7 +38,11 @@
         CSS, and Javascript to creating and implementing dynamic components in
         React JS.
       </p>
-      <img src="" alt="" />
+      <img src="ayo.jpg" alt="" />
+      <div class="socialP">
+        <i class="fa-brands fa-github fa-5x"></i>
+        <p>hi</p>
+      </div>
     </section>
   </body>
 </html>
