--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Personal page</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <script
       src="https://kit.fontawesome.com/e749fbab06.js"
       crossorigin="anonymous"
@@ -39,10 +46,35 @@
         React JS.
       </p>
       <img src="ayo.jpg" alt="" />
-      <div class="socialP">
-        <i class="fa-brands fa-github fa-5x"></i>
-        <p>hi</p>
+      <div class="socialPlataformWrap">
+        <div class="socialPlataform">
+          <a
+            href="https://www.linkedin.com/in/angel-mendez-150991246/"
+            target="_blank"
+            referrerpolicy="no-referrer"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+        </div>
+        <div class="socialPlataform">
+          <a
+            href="https://github.com/anme-22"
+            target="_blank"
+            referrerpolicy="no-referrer"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+        </div>
+        <div class="socialPlataform">
+          <a
+            href="https://www.instagram.com/anme22/"
+            target="_blank"
+            referrerpolicy="no-referrer"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+        </div>
       </div>
     </section>
+    <footer>
+      <div><span>footer</span></div>
+    </footer>
   </body>
 </html>
