adding contact form

--- a/index.html
+++ b/index.html
@@ -95,13 +95,11 @@
         </div>
         <div class="personalInfo">
           <p>
-            Hello, I'm Angel Mendez. I studied Systems Engineering at the
-            Catholic University of Honduras. I am a passionate individual with a
-            keen interest in sports, particularly soccer and boxing. Alongside
-            my sporting pursuits, I have developed a profound fascination for
-            books on critical thinking and history. This combination of
-            technical knowledge and a love for intellectual exploration has
-            shaped my perspective on problem-solving and holistic understanding.
+            I'm Angel Mendez, a Systems Engineering graduate from the Catholic
+            University of Honduras. I'm passionate about soccer and boxing and
+            have a deep interest in books on critical thinking and history. This
+            blend of technical expertise and intellectual curiosity has
+            influenced my problem-solving approach and holistic outlook.
           </p>
         </div>
       </div>
@@ -111,18 +109,12 @@
       <div class="row">
         <div class="jobExperience">
           <p>
-            I have garnered two years of hands-on experience in web development,
-            fostering a strong foundation in HTML, CSS, and JavaScript. My
-            professional journey includes significant contributions to the
-            development of Recontent, a Software-as-a-Service (SaaS) application
-            that utilizes a technology stack comprising React JS, Remix,
-            Firebase, and Tailwind CSS. Additionally, I spearheaded the entire
-            development process of 'The Signature App' during my tenure at
-            Sommerdahl Adventures, where I employed React, Typescript, and
-            Tailwind CSS. These experiences have not only refined my technical
-            skills but have also instilled in me a profound understanding of
-            collaborative development and the intricacies of creating
-            user-centric solutions.
+            Experienced in web development for two years, proficient in HTML,
+            CSS, and JavaScript. Played a key role in building Recontent, a SaaS
+            application using React JS, Remix, Firebase, and Tailwind CSS. Led
+            the development of 'The Signature App' at Sommerdahl Adventures
+            using React, Typescript, and Tailwind CSS, enhancing collaborative
+            skills and user-centric approach.
           </p>
         </div>
         <div class="jobImage">
@@ -130,6 +122,33 @@
         </div>
       </div>
     </section>
-    <section id="contact"></section>
+    <section id="contact">
+      <div class="row"><h1>Contact me</h1></div>
+      <div class="form">
+        <form action="submit">
+          <input
+            name="name"
+            type="text"
+            placeholder="Name"
+            class="feedbackInput"
+          />
+          <input
+            name="email"
+            type="text"
+            placeholder="Email"
+            class="feedbackInput"
+          />
+          <textarea
+            name="text"
+            id=""
+            cols="30"
+            rows="10"
+            placeholder="Comment"
+            class="feedbackInput"
+          ></textarea>
+          <input type="submit" value="SUBMIT" />
+        </form>
+      </div>
+    </section>
   </body>
 </html>
