adding mail service

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/stylesheets/navbar.css" />
     <link rel="stylesheet" href="/stylesheets/aboutMe.css" />
+    <link rel="stylesheet" href="/stylesheets/footer.css" />
     <title>About Me</title>
   </head>
   <body>
@@ -60,5 +61,14 @@
         </div>
       </div>
     </section>
+
+    <footer>
+      <div class="footer">
+        &copy;<span id="year"> </span
+        ><span> Angel Mendez. All rights reserved.</span>
+      </div>
+    </footer>
+
+    <script src="script.js"></script>
   </body>
 </html>
