--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Personal page</title>
     <link rel="stylesheet" href="./stylesheets/navbar.css" />
     <link rel="stylesheet" href="./stylesheets/style.css" />
+    <link rel="stylesheet" href="./stylesheets/footer.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -84,5 +85,13 @@
         </div>
       </div>
     </section>
+    <footer>
+      <div class="footer">
+        &copy;<span id="year"> </span
+        ><span> Angel Mendez. All rights reserved.</span>
+      </div>
+    </footer>
+
+    <script src="script.js"></script>
   </body>
 </html>
