--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <base href="/github-pages/" />
     <script
       src="https://kit.fontawesome.com/e749fbab06.js"
       crossorigin="anonymous"
