adding right repo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <base href="/github-pages/" />
+    <base href="/personal-page/" />
     <script
       src="https://kit.fontawesome.com/e749fbab06.js"
       crossorigin="anonymous"
