--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <label for="checkbox_toggle" class="hamburger">&#9776;</label>
           <div class="menu">
             <li><a href="/index.html">Home</a></li>
-            <li><a href="/aboutMe.html">About</a></li>
+            <li><a href="/personal-page/aboutMe.html">About</a></li>
             <li><a href="/contact.html">Contact</a></li>
           </div>
         </ul>
