adding full url

--- a/index.html
+++ b/index.html
@@ -28,9 +28,21 @@
           <input type="checkbox" id="checkbox_toggle" />
           <label for="checkbox_toggle" class="hamburger">&#9776;</label>
           <div class="menu">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/personal-page/aboutMe.html">About</a></li>
-            <li><a href="/contact.html">Contact</a></li>
+            <li>
+              <a href="https://anme-22.github.io/personal-page/index.html"
+                >Home</a
+              >
+            </li>
+            <li>
+              <a href="https://anme-22.github.io/personal-page/aboutMe.html"
+                >About</a
+              >
+            </li>
+            <li>
+              <a href="https://anme-22.github.io/personal-page//contact.html"
+                >Contact</a
+              >
+            </li>
           </div>
         </ul>
       </nav>
