--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Personal page</title>
-    <link rel="stylesheet" href="./stylesheets/navbar.css" />
-    <link rel="stylesheet" href="./stylesheets/style.css" />
-    <link rel="stylesheet" href="./stylesheets/footer.css" />
+    <link
+      rel="stylesheet"
+      href="https://anme-22.github.io/personal-page/stylesheets/navbar.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://anme-22.github.io/personal-page/stylesheets/style.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://anme-22.github.io/personal-page/stylesheets/footer.css"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -39,7 +48,7 @@
               >
             </li>
             <li>
-              <a href="https://anme-22.github.io/personal-page//contact.html"
+              <a href="https://anme-22.github.io/personal-page/contact.html"
                 >Contact</a
               >
             </li>
