--- a/aboutMe.html
+++ b/aboutMe.html
@@ -3,9 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/stylesheets/navbar.css" />
-    <link rel="stylesheet" href="/stylesheets/aboutMe.css" />
-    <link rel="stylesheet" href="/stylesheets/footer.css" />
+    <link
+      rel="stylesheet"
+      href="https://anme-22.github.io/personal-page/stylesheets/navbar.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://anme-22.github.io/personal-page/stylesheets/aboutMe.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://anme-22.github.io/personal-page/stylesheets/footer.css"
+    />
     <title>About Me</title>
   </head>
   <body>
