adding relative path

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -25,9 +25,21 @@
           <input type="checkbox" id="checkbox_toggle" />
           <label for="checkbox_toggle" class="hamburger">&#9776;</label>
           <div class="menu">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/aboutMe.html">About</a></li>
-            <li><a href="/contact.html">Contact</a></li>
+            <li>
+              <a href="https://anme-22.github.io/personal-page//index.html"
+                >Home</a
+              >
+            </li>
+            <li>
+              <a href="https://anme-22.github.io/personal-page//aboutMe.html"
+                >About</a
+              >
+            </li>
+            <li>
+              <a href="https://anme-22.github.io/personal-page//contact.html"
+                >Contact</a
+              >
+            </li>
           </div>
         </ul>
       </nav>
@@ -39,7 +51,11 @@
       </div>
       <div class="row">
         <div class="personalImage">
-          <img src="/assets/aboutMe.jpg" alt="angel" width="300px" />
+          <img
+            src="https://anme-22.github.io/personal-page//assets/aboutMe.jpg"
+            alt="angel"
+            width="300px"
+          />
         </div>
         <div class="personalInfo">
           <p>
@@ -66,7 +82,10 @@
           </p>
         </div>
         <div class="jobImage">
-          <img src="/assets/codingImage.jpg" alt="coding" />
+          <img
+            src="https://anme-22.github.io/personal-page//assets/codingImage.jpg"
+            alt="coding"
+          />
         </div>
       </div>
     </section>
@@ -78,6 +97,6 @@
       </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="https://anme-22.github.io/personal-page/script.js"></script>
   </body>
 </html>
