--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/stylesheets/navbar.css" />
-    <link rel="stylesheet" href="/stylesheets/contactMe.css" />
+    <link
+      rel="stylesheet"
+      href="https://anme-22.github.io/personal-page//stylesheets/navbar.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://anme-22.github.io/personal-page//stylesheets/contactMe.css"
+    />
     <title>Contact Me</title>
   </head>
   <body>
@@ -15,9 +21,21 @@
           <input type="checkbox" id="checkbox_toggle" />
           <label for="checkbox_toggle" class="hamburger">&#9776;</label>
           <div class="menu">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/aboutMe.html">About</a></li>
-            <li><a href="/contact.html">Contact</a></li>
+            <li>
+              <a href="https://anme-22.github.io/personal-page//index.html"
+                >Home</a
+              >
+            </li>
+            <li>
+              <a href="https://anme-22.github.io/personal-page//aboutMe.html"
+                >About</a
+              >
+            </li>
+            <li>
+              <a href="https://anme-22.github.io/personal-page//contact.html"
+                >Contact</a
+              >
+            </li>
           </div>
         </ul>
       </nav>
