--- a/index.html
+++ b/index.html
@@ -76,7 +76,10 @@
         </p>
       </div>
       <div class="row">
-        <img src="/assets/ayo.jpg" alt="" />
+        <img
+          src="https://anme-22.github.io/personal-page/assets/ayo.jpg"
+          alt=""
+        />
       </div>
       <div class="row">
         <div class="socialPlataformWrap">
@@ -114,6 +117,6 @@
       </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="https://anme-22.github.io/personal-page/script.js"></script>
   </body>
 </html>
