--- a/aboutMe.html
+++ b/aboutMe.html
@@ -26,17 +26,17 @@
           <label for="checkbox_toggle" class="hamburger">&#9776;</label>
           <div class="menu">
             <li>
-              <a href="https://anme-22.github.io/personal-page//index.html"
+              <a href="https://anme-22.github.io/personal-page/index.html"
                 >Home</a
               >
             </li>
             <li>
-              <a href="https://anme-22.github.io/personal-page//aboutMe.html"
+              <a href="https://anme-22.github.io/personal-page/aboutMe.html"
                 >About</a
               >
             </li>
             <li>
-              <a href="https://anme-22.github.io/personal-page//contact.html"
+              <a href="https://anme-22.github.io/personal-page/contact.html"
                 >Contact</a
               >
             </li>
@@ -52,7 +52,7 @@
       <div class="row">
         <div class="personalImage">
           <img
-            src="https://anme-22.github.io/personal-page//assets/aboutMe.jpg"
+            src="https://anme-22.github.io/personal-page/assets/aboutMe.jpg"
             alt="angel"
             width="300px"
           />
@@ -83,7 +83,7 @@
         </div>
         <div class="jobImage">
           <img
-            src="https://anme-22.github.io/personal-page//assets/codingImage.jpg"
+            src="https://anme-22.github.io/personal-page/assets/codingImage.jpg"
             alt="coding"
           />
         </div>
