--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="https://anme-22.github.io/personal-page//stylesheets/navbar.css"
+      href="https://anme-22.github.io/personal-page/stylesheets/navbar.css"
     />
     <link
       rel="stylesheet"
-      href="https://anme-22.github.io/personal-page//stylesheets/contactMe.css"
+      href="https://anme-22.github.io/personal-page/stylesheets/contactMe.css"
     />
     <title>Contact Me</title>
   </head>
@@ -22,17 +22,17 @@
           <label for="checkbox_toggle" class="hamburger">&#9776;</label>
           <div class="menu">
             <li>
-              <a href="https://anme-22.github.io/personal-page//index.html"
+              <a href="https://anme-22.github.io/personal-page/index.html"
                 >Home</a
               >
             </li>
             <li>
-              <a href="https://anme-22.github.io/personal-page//aboutMe.html"
+              <a href="https://anme-22.github.io/personal-page/aboutMe.html"
                 >About</a
               >
             </li>
             <li>
-              <a href="https://anme-22.github.io/personal-page//contact.html"
+              <a href="https://anme-22.github.io/personal-page/contact.html"
                 >Contact</a
               >
             </li>
@@ -44,7 +44,7 @@
       <div class="row"><h1>Contact me</h1></div>
       <div class="form">
         <form
-          action="https://formsubmit.co/angeldavidmendez22@gmail.com.com"
+          action="https://formsubmit.co/angeldavidmendez22@gmail.com"
           method="post"
         >
           <input
