--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
           <input
             type="hidden"
             name="_next"
-            value="http://127.0.0.1:5500/index.html"
+            value="https://anme-22.github.io/personal-page/index.html"
           />
           <textarea
             name="text"
